--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <span>EN <i class="fa fa-angle-down"></i></span>
                 <div class="flag-dropdown">
                     <ul>
+                        <li><a href="#">Fa</a></li>
                         <li><a href="#">Zi</a></li>
                         <li><a href="#">Fr</a></li>
                     </ul>
